@@ -31,6 +31,18 @@ unsigned short swapShort(unsigned short x) {
   return (((x>>8)&0xFF)|((x&0xFF)<<8));
 }
 
+unsigned long long getDOMID(unsigned long long id_raw) {
+    unsigned long long id = 0;
+    int i;
+    unsigned char b;
+    for (i=0; i < 6; i++) {
+        b = 0xff & (id_raw >> (i+2)*8);
+        id |= (unsigned long long)b << (8-i-3)*8;
+    }
+
+    return id;
+}
+
 unsigned long long getTimeStamp(unsigned char * buf) {
   unsigned long long t = 0;
   int i; for(i=0;i<6;i++) {
@@ -57,27 +69,31 @@ int timesOutOfOrder(unsigned long long t, unsigned long long tprev, unsigned nbi
 
 int main(int argc, char *argv[]) {
   int option_index = 0;
-  static struct option long_options[] = {
-    {"help",    0,0,0},
-    {"payload",    0,0,0},
-    {0,         0,0,0}
-  };
   int dopayload=0;
+  static struct option long_options[] = {
+    {"help", no_argument, 0, 'h'},
+    {"payload", no_argument, 0, 'p'},
+    {0,0,0,0}
+  };
   while(1) {
-    char c = getopt_long (argc, argv, "hcdvs:", long_options, &option_index);
-    if (c == -1) break;
+    char c = getopt_long(argc, argv, "hp", long_options, &option_index);
+    // End of options
+    if (c == -1) 
+        break;
+
     switch(c) {
-    case 'p': dopayload=1;
+    case 'p': dopayload=1; break;
     case 'h':
-    default: exit(usage());
+    default: 
+        exit(usage());
     }
   }
 
   
 #define BUFS 4096
   unsigned long long tprev = 0;
-  if(argc != 2) return usage();
-  char *filen = argv[1];
+  if(optind == argc) return usage();
+  char *filen = argv[optind];
   printf("%s:\n", filen);
   int fd = open(filen, O_RDONLY, 0);
   if(fd < 0) {
@@ -95,16 +111,17 @@ int main(int argc, char *argv[]) {
       nr = read(fd, &phdr, sizeof(payloadHdr_t));
       if(nr == 0) break; // EOF
       if(nr != sizeof(payloadHdr_t)) {
-	fprintf(stderr,"Couldn't read %d bytes for payload header!\n", sizeof(hlen));
-	exit(-1);
+          fprintf(stderr,"Couldn't read %lu bytes for payload header!\n", sizeof(hlen));
+          exit(-1);
       }
+      printf("PHDR(domid %llx)\n", getDOMID(phdr.domid));
     }
 
     int p = 0;
     nr = read(fd, &hlen, sizeof(hlen));
     if(nr == 0) break; // EOF
     if(nr != sizeof(hlen)) {
-      fprintf(stderr,"Couldn't read %d bytes for block header!\n", sizeof(hlen));
+      fprintf(stderr,"Couldn't read %lu bytes for block header!\n", sizeof(hlen));
       exit(-1);
     }
     unsigned short len = swapShort(hlen);
@@ -112,7 +129,7 @@ int main(int argc, char *argv[]) {
     /* Get format ID */
     nr = read(fd, &hfmt, sizeof(hfmt));
     if(nr != sizeof(hfmt)) {
-      fprintf(stderr,"Couldn't read %d bytes for event type!\n", sizeof(hfmt));
+      fprintf(stderr,"Couldn't read %lu bytes for event type!\n", sizeof(hfmt));
       exit(-1);
     }
     unsigned short fmtid = swapShort(hfmt);
